modified dataset and requirements

--- a/notebook/EDA.ipynb
+++ b/notebook/EDA.ipynb
@@ -949,8 +949,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 200,
    "id": "3b1895a0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.to_csv('modified_iris.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ef971e33",
    "metadata": {},
    "outputs": [],
    "source": []
